--- a/pyeonhalin/app/src/main/AndroidManifest.xml
+++ b/pyeonhalin/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".HomeActivity"
+            android:name="activity.HomeActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,11 +19,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".BaseActivity" />
-        <activity android:name=".EventActivity" />
-        <activity android:name=".CommunityActivity" />
-        <activity android:name=".SortActivity" />
-        <activity android:name=".MapActivity"></activity>
+        <activity android:name="activity.BaseActivity" />
+        <activity android:name="activity.EventActivity" />
+        <activity android:name="activity.CommunityActivity" />
+        <activity android:name="activity.SortActivity" />
+        <activity android:name="activity.MapActivity"></activity>
     </application>
 
 </manifest>
