--- a/pyeonhalin/app/src/main/AndroidManifest.xml
+++ b/pyeonhalin/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user.pyenhalean">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="activity.HomeActivity"
+            android:name=".activity.HomeActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,12 +20,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="activity.BaseActivity" />
-        <activity android:name="activity.EventActivity" />
-        <activity android:name="activity.CommunityActivity" />
-        <activity android:name="activity.SortActivity" />
-        <activity android:name="activity.MapActivity"></activity>
+        <activity android:name=".activity.BaseActivity" />
+        <activity android:name=".activity.EventActivity" />
+        <activity android:name=".activity.CommunityActivity" />
+        <activity android:name=".activity.SortActivity" />
+        <activity android:name=".activity.MapActivity" />
+        <activity android:name=".activity.RecentlyViewedActivity"></activity>
     </application>
 
 </manifest>
