--- a/pyeonhalin/.gitignore
+++ b/pyeonhalin/.gitignore
@@ -134,3 +134,7 @@ fabric.properties
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.gitignore.io/api/androidstudio
+
+
+# password of map
+app/src/main/res/values/strings.xml
