--- a/pyeonhalin/app/build.gradle
+++ b/pyeonhalin/app/build.gradle
@@ -19,6 +19,18 @@ android {
     buildToolsVersion '28.0.3'
 }
 
+allprojects {
+    repositories {
+        google()
+        jcenter()
+
+        // 네이버 지도 저장소
+        maven {
+            url 'https://navercorp.bintray.com/maps'
+        }
+    }
+}
+
 dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
@@ -29,4 +41,6 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.10.3'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.naver.maps:map-sdk:3.0.0'
 }
+
