--- a/pyeonhalin/app/src/main/AndroidManifest.xml
+++ b/pyeonhalin/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity android:name=".activity.SortActivity" />
         <activity android:name=".activity.MapActivity" />
         <activity android:name=".activity.RecentlyViewedActivity" />
-        <activity android:name=".activity.SplashActivity"></activity>
+        <activity android:name=".activity.SplashActivity" />
+        <activity android:name=".activity.AddItemActivity"></activity>
     </application>
 
 </manifest>
