--- a/pyeonhalin/app/build.gradle
+++ b/pyeonhalin/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.naver.maps:map-sdk:3.0.0'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
 }
