--- a/pyeonhalin/app/build.gradle
+++ b/pyeonhalin/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.naver.maps:map-sdk:3.0.0'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'gun0912.ted:tedpermission:2.2.2'
 }
